# queued

./: .gitignore  .gitmodules  PKGBUILD  README.md  create_archive.sh  install.sh  queued-1.0.0.tar.xz  queued-1.1.0-src.tar.xz  queued-1.2.0-src.tar.xz
sources/: CMakeLists.txt  add_queued  add_queued.1  libraries.cmake  paths.cmake  queued  queued.1  queued.conf  queued.conf.5  queued.service  version.h.in
sources/plugins/: CMakeLists.txt  QueuedConfig.cmake
sources/plugins/emailnotify/: QueuedEmailNotify.cpp  QueuedEmailNotify.h  QueuedEmailNotifyHelper.cpp  QueuedEmailNotifyHelper.h  emailnotify.json
sources/queued/: CMakeLists.txt  QueuedConfig.cmake  QueuedConfig.h.in  QueuedLibraries.cmake  QueuedMacros.cmake  QueuedPaths.cmake.in  adds.cmake  docs.cmake  doxygen.conf.in
sources/queued-daemon/: CMakeLists.txt  QueuedConfig.cmake  QueuedLibraries.cmake  QueuedMacros.cmake  QueuedPaths.cmake.in  adds.cmake  queued-daemon.1  queued.ini.example
sources/queued-daemon/src/: CMakeLists.txt  QueuedApplication.cpp  QueuedApplication.h  QueuedApplicationInterface.cpp  QueuedApplicationInterface.h  main.cpp
sources/queued-server/: CMakeLists.txt  queued-server.1
sources/queued-server/src/: QueuedServer.cpp  QueuedServer.h  QueuedTcpServer.cpp  QueuedTcpServer.h  QueuedTcpServerResponseHelper.cpp  QueuedTcpServerResponseHelper.h  QueuedTcpServerResponseHelperApi1.cpp  QueuedTcpServerResponseHelperApi1.h  QueuedTcpServerResponseHelperAuth.cpp  QueuedTcpServerResponseHelperAuth.h  QueuedTcpServerResponseHelperOption.cpp  QueuedTcpServerResponseHelperOption.h  QueuedTcpServerResponseHelperPermissions.cpp  QueuedTcpServerResponseHelperPermissions.h  QueuedTcpServerResponseHelperPlugins.cpp  QueuedTcpServerResponseHelperPlugins.h  QueuedTcpServerResponseHelperTask.cpp  QueuedTcpServerResponseHelperTask.h  QueuedTcpServerResponseHelperUser.cpp  QueuedTcpServerResponseHelperUser.h  QueuedTcpServerThread.cpp  QueuedTcpServerThread.h  main.cpp
sources/queued/include/queued/: Queued.h  QueuedAdvancedSettings.h  QueuedConfiguration.h  QueuedControlGroupsAdaptor.h  QueuedCore.h  QueuedCoreAdaptor.h  QueuedCoreInterface.h  QueuedCorePropertiesInterface.h  QueuedDatabase.h  QueuedDatabaseManager.h  QueuedDatabaseSchema.h  QueuedDebug.h  QueuedEnums.h  QueuedExceptions.h  QueuedLimits.h  QueuedPluginInterface.h  QueuedPluginManager.h  QueuedPluginManagerInterface.h  QueuedPluginSpecification.h  QueuedProcess.h  QueuedProcessManager.h  QueuedPropertyInterface.h  QueuedReportInterface.h  QueuedReportManager.h  QueuedResult.h  QueuedSettings.h  QueuedStaticConfig.h  QueuedSystemInfo.h  QueuedTokenManager.h  QueuedUser.h  QueuedUserManager.h
sources/queued/include/queued/private/: QueuedCorePrivate.h  QueuedCorePrivateHelper.h
sources/queued/src/: CMakeLists.txt  QueuedAdvancedSettings.cpp  QueuedControlGroupsAdaptor.cpp  QueuedCore.cpp  QueuedCoreAdaptor.cpp  QueuedCoreInterface.cpp  QueuedCorePrivate.cpp  QueuedCorePrivateHelper.cpp  QueuedCorePrivateInitializator.cpp  QueuedCorePrivateSlots.cpp  QueuedCorePropertiesInterface.cpp  QueuedDatabase.cpp  QueuedDatabaseManager.cpp  QueuedDebug.cpp  QueuedLimits.cpp  QueuedPluginManager.cpp  QueuedPluginSpecification.cpp  QueuedProcess.cpp  QueuedProcessManager.cpp  QueuedPropertyInterface.cpp  QueuedReportInterface.cpp  QueuedReportManager.cpp  QueuedSettings.cpp  QueuedSystemInfo.cpp  QueuedTokenManager.cpp  QueuedUser.cpp  QueuedUserManager.cpp
sources/queuedctl/: CMakeLists.txt  queuedctl.1
sources/queuedctl/src/: CMakeLists.txt  QueuedctlAuth.cpp  QueuedctlAuth.h  QueuedctlCommon.cpp  QueuedctlCommon.h  QueuedctlOption.cpp  QueuedctlOption.h  QueuedctlPermissions.cpp  QueuedctlPermissions.h  QueuedctlPlugins.cpp  QueuedctlPlugins.h  QueuedctlTask.cpp  QueuedctlTask.h  QueuedctlUser.cpp  QueuedctlUser.h  main.cpp
